[package]
name = "argonaut"
version = "0.5.0"
authors = ["Jakob Lautrup Nysom <jako3047@gmail.com>"]
description = "A simple argument parser"
readme = "README.md"
keywords = ["argument", "parser", "cli", "commandline", "argparse"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Machtan/argonaut-rs"